<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multiplication Tables</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="quiz_question">9 X 3 = ? </string>
    <string name="number_1">1 x</string>
    <string name="number_1_off">1 ?</string>
    <string name="number_2">2 x</string>
    <string name="number_3">3 x</string>
    <string name="number_4">4 x</string>
    <string name="number_5">5 x</string>
    <string name="number_6">6 x</string>
    <string name="number_7">7 x</string>
    <string name="number_8">8 x</string>
    <string name="number_9">9 x</string>
    <string name="number_10">10 x</string>
    <string name="number_11">11 x</string>
    <string name="number_12">12 x</string>
    
    <string name="number_2_off">2 ?</string>
    <string name="number_3_off">3 ?</string>
    <string name="number_4_off">4 ?</string>
    <string name="number_5_off">5 ?</string>
    <string name="number_6_off">6 ?</string>
    <string name="number_7_off">7 ?</string>
    <string name="number_8_off">8 ?</string>
    <string name="number_9_off">9 ?</string>
    <string name="number_10_off">10 ?</string>
    <string name="number_11_off">11 ?</string>
    <string name="number_12_off">12 ?</string>
   
    
    <string name="learn_welcome_message">Click on any number to revise its times table:</string>
    <string name="actually_learn_welcome_message">Click on any number to learn its times table:</string>
    <string name="quiz_welcome_message">Select ONE OR MORE numbers to include in the Quiz. A total of 10 Random Questions will be asked.</string>
    <string name="answer1">27</string>
    <string name="answer2">25</string>
    <string name="answer3">29</string>
    <string name="answer4">24</string>
    <string name="question_number">5</string>
    <string name="current_score">4/4</string>
    <string name="correct_string">Correct!</string>
    <string name="incorrect_string">Incorrect!</string>
    <string name="question_indicator">Question?</string>
    <string name="score_indicator">Score</string>
    <string name="next_question">Next Question</string>
    <string name="next_question_button">Next Question</string>
    <string name="button_learn">Learn</string>
    <string name="button_random_quiz">Quiz</string>
    <string name="button_score_card">Score</string>
    <string name="button_revision_quiz">Revision</string>
    <string name="welcome_message">Learn and practice maths Times Tables!</string>
    <string name="title_activity_main_menu">Times Tables Master</string>
    <string name="title_activity_quiz">Question</string>
    <string name="title_activity_quiz_select_numbers">Test your knowledge</string>
    <string name="title_activity_select_number_to_learn">Learn Times Tables</string>
    <string name="title_activity_times_table_of_anumber">Multiplication Table</string>
    <string name="voice_ready_message">My voice is ready now. Touch an number and repeat after me.</string>
    <string name="title_activity_quiz_result">Here is the result!</string>
	<string name="title_activity_revise_tables">Revise Times Tables</string>
</resources>
