<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:paddingBottom="?attr/actionBarSize"
    android:paddingTop="?attr/actionBarSize" >

    <TextView
        android:id="@+id/quiz_welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="left|bottom"
        android:text="@string/quiz_welcome_message"
        style="@style/AppTheme.InstructionText" />

    <LinearLayout
        android:id="@+id/learn_options_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/number_1"
                style="@style/ButtonText"
                android:background="@drawable/my_toggle_button"
                
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textOn="@string/number_1"
                android:textOff="@string/number_1_off"
                 />

            <ToggleButton
                android:id="@+id/number_2"
                style="@style/ButtonText"
                android:background="@drawable/my_toggle_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="userChoice"
                android:textOn="@string/number_2"
                android:textOff="@string/number_2_off" />

            <ToggleButton
                android:id="@+id/number_3"
                style="@style/ButtonText"
                android:background="@drawable/my_toggle_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="userChoice"
                android:textOn="@string/number_3"
                android:textOff="@string/number_3_off" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/number_4"
                style="@style/ButtonText"
                android:background="@drawable/my_toggle_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="userChoice"
                android:textOn="@string/number_4"
                android:textOff="@string/number_4_off" />

            <ToggleButton
                android:id="@+id/number_5"
                style="@style/ButtonText"
                android:background="@drawable/my_toggle_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="userChoice"
                android:textOn="@string/number_5" 
                android:textOff="@string/number_5_off"/>

            <ToggleButton
                android:id="@+id/number_6"
                style="@style/ButtonText"
                android:background="@drawable/my_toggle_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="userChoice"
                android:textOn="@string/number_6" 
                android:textOff="@string/number_6_off"/>

            </LinearLayout >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/number_7"
                    style="@style/ButtonText"
                    android:background="@drawable/my_toggle_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:textOn="@string/number_7" 
                    android:textOff="@string/number_7_off"/>

                <ToggleButton
                    android:id="@+id/number_8"
                    style="@style/ButtonText"
                    android:background="@drawable/my_toggle_button"
                	android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:textOn="@string/number_8"
                    android:textOff="@string/number_8_off" />

                <ToggleButton
                    android:id="@+id/number_9"
                    style="@style/ButtonText"
                    android:background="@drawable/my_toggle_button"
                	android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:textOn="@string/number_9" 
                    android:textOff="@string/number_9_off"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/number_10"
                    style="@style/ButtonText"
                    android:background="@drawable/my_toggle_button"
                	android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:textOn="@string/number_10" 
                    android:textOff="@string/number_10_off"/>

                <ToggleButton
                    android:id="@+id/number_11"
                    style="@style/ButtonText"
                    android:background="@drawable/my_toggle_button"
                	android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:textOn="@string/number_11" 
                    android:textOff="@string/number_11_off"/>

                <ToggleButton
                    android:id="@+id/number_12"
                    style="@style/ButtonText"
                    android:background="@drawable/my_toggle_button"
                	android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:textOn="@string/number_12" 
                    android:textOff="@string/number_12_off"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
