<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:layout_weight="2" />
	
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="4"
    	android:orientation="vertical">
    
               		<Button
                    android:id="@+id/learn"
                    style="@style/ButtonText"
                    android:background="@drawable/btn_blue"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:text="@string/button_learn" />
               
                   <Button
                    android:id="@+id/revision_quiz"
                    style="@style/ButtonText"
                    android:background="@drawable/btn_blue"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:text="@string/button_revision_quiz" />
                   
                   <Button
                    android:id="@+id/random_quiz"
                    style="@style/ButtonText"
                    android:background="@drawable/btn_blue"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="userChoice"
                    android:text="@string/button_random_quiz" />
                    
				
</LinearLayout>

<TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text=""
        android:layout_weight="1" />

</LinearLayout>
